# pinocchio-bench

./: .gitignore  Cargo.toml  README.md  RESULTS.md  ROADMAP.md
bench/: Cargo.toml
bench/src/: main.rs
blog/: 01-anchor-vs-pinocchio-measured.md  02-w9-lending-refresh-outline.md  02-w9-lending-refresh.md
keys/: anchor-w0-noop.json  anchor-w1-write.json  anchor-w10-vault.json  anchor-w11-oracle.json  anchor-w12-perp.json  anchor-w2-spl-cpi.json  anchor-w3-orderbook.json  anchor-w4-matching.json  anchor-w6-multihop.json  anchor-w7-hook.json  anchor-w8-amm.json  anchor-w9-refresh.json  pinocchio-w0-noop.json  pinocchio-w1-write.json  pinocchio-w10-vault.json  pinocchio-w11-oracle.json  pinocchio-w12-perp.json  pinocchio-w2-spl-cpi.json  pinocchio-w3-orderbook.json  pinocchio-w4-matching.json  pinocchio-w6-multihop.json  pinocchio-w7-hook.json  pinocchio-w8-amm.json  pinocchio-w9-refresh.json
programs/anchor-w0-noop/: Cargo.toml
programs/anchor-w0-noop/src/: lib.rs
programs/anchor-w1-write/: Cargo.toml
programs/anchor-w1-write/src/: lib.rs
programs/anchor-w10-vault/: Cargo.toml
programs/anchor-w10-vault/src/: lib.rs
programs/anchor-w11-oracle/: Cargo.toml
programs/anchor-w11-oracle/src/: lib.rs
programs/anchor-w12-perp/: Cargo.toml
programs/anchor-w12-perp/src/: lib.rs
programs/anchor-w2-spl-cpi/: Cargo.toml
programs/anchor-w2-spl-cpi/src/: lib.rs
programs/anchor-w3-orderbook/: Cargo.toml
programs/anchor-w3-orderbook/src/: lib.rs
programs/anchor-w4-matching/: Cargo.toml
programs/anchor-w4-matching/src/: lib.rs
programs/anchor-w6-multihop/: Cargo.toml
programs/anchor-w6-multihop/src/: lib.rs
programs/anchor-w7-hook/: Cargo.toml
programs/anchor-w7-hook/src/: lib.rs
programs/anchor-w8-amm/: Cargo.toml
programs/anchor-w8-amm/src/: lib.rs
programs/anchor-w9-refresh/: Cargo.toml
programs/anchor-w9-refresh/src/: lib.rs
programs/pinocchio-w0-noop/: Cargo.toml
programs/pinocchio-w0-noop/src/: lib.rs
programs/pinocchio-w1-write/: Cargo.toml
programs/pinocchio-w1-write/src/: lib.rs
programs/pinocchio-w10-vault/: Cargo.toml
programs/pinocchio-w10-vault/src/: lib.rs
programs/pinocchio-w11-oracle/: Cargo.toml
programs/pinocchio-w11-oracle/src/: lib.rs
programs/pinocchio-w12-perp/: Cargo.toml
programs/pinocchio-w12-perp/src/: lib.rs
programs/pinocchio-w2-spl-cpi/: Cargo.toml
programs/pinocchio-w2-spl-cpi/src/: lib.rs
programs/pinocchio-w3-orderbook/: Cargo.toml
programs/pinocchio-w3-orderbook/src/: lib.rs
programs/pinocchio-w4-matching/: Cargo.toml
programs/pinocchio-w4-matching/src/: lib.rs
programs/pinocchio-w6-multihop/: Cargo.toml
programs/pinocchio-w6-multihop/src/: lib.rs
programs/pinocchio-w7-hook/: Cargo.toml
programs/pinocchio-w7-hook/src/: lib.rs
programs/pinocchio-w8-amm/: Cargo.toml
programs/pinocchio-w8-amm/src/: lib.rs
programs/pinocchio-w9-refresh/: Cargo.toml
programs/pinocchio-w9-refresh/src/: lib.rs
scripts/: build.sh
