[workspace]
resolver = "2"
members = [
    "programs/anchor-w0-noop",
    "programs/anchor-w1-write",
    "programs/anchor-w2-spl-cpi",
    "programs/anchor-w3-orderbook",
    "programs/anchor-w4-matching",
    "programs/anchor-w6-multihop",
    "programs/anchor-w7-hook",
    "programs/anchor-w8-amm",
    "programs/anchor-w9-refresh",
    "programs/anchor-w10-vault",
    "programs/anchor-w11-oracle",
    "programs/anchor-w12-perp",
    "programs/pinocchio-w0-noop",
    "programs/pinocchio-w1-write",
    "programs/pinocchio-w2-spl-cpi",
    "programs/pinocchio-w3-orderbook",
    "programs/pinocchio-w4-matching",
    "programs/pinocchio-w6-multihop",
    "programs/pinocchio-w7-hook",
    "programs/pinocchio-w8-amm",
    "programs/pinocchio-w9-refresh",
    "programs/pinocchio-w10-vault",
    "programs/pinocchio-w11-oracle",
    "programs/pinocchio-w12-perp",
    "bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["psyto <saito.hiroyuki@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/psyto/pinocchio-bench"

[workspace.dependencies]
# Anchor side
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }

# Pinocchio side
pinocchio = "0.11.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"

# Shared / SPL
spl-token = { version = "8.0", default-features = false, features = ["no-entrypoint"] }

# Bench harness
litesvm = "0.12.0"
solana-sdk = "3.0"
solana-program = "3.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
incremental = false
