[package]
name = "pinocchio-w6-multihop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "pinocchio_w6_multihop"

[dependencies]
pinocchio = { workspace = true }
pinocchio-token = { workspace = true }
